<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright Siemens AG, 2013-2017, 2019. Part of the SW360 Portal Project.
  ~
  ~ SPDX-License-Identifier: EPL-1.0
  ~
  ~ All rights reserved. This program and the accompanying materials
  ~ are made available under the terms of the Eclipse Public License v1.0
  ~ which accompanies this distribution, and is available at
  ~ http://www.eclipse.org/legal/epl-v10.html
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <licenses>
        <license>
            <name>Eclipse Public License 1.0</name>
            <url>http://www.eclipse.org/legal/epl-v10.html</url>
        </license>
    </licenses>

    <groupId>org.eclipse.sw360</groupId>
    <artifactId>sw360</artifactId>
    <packaging>pom</packaging>
    <version>${revision}</version>

    <scm>
        <connection>scm:git:https://github.com/eclipse/sw360</connection>
    </scm>

    <distributionManagement>
        <repository>
            <id>artifact-repository</id>
            <url>https://github.com/eclipse/sw360</url>
        </repository>
    </distributionManagement> 

    <modules>
        <module>build-configuration</module>
        <module>libraries</module>
        <module>backend</module>
        <module>frontend</module>
        <module>rest</module>
    </modules>

    <properties>
        <!-- This is the single place for changing the version of SW360 -->
        <revision>5.1.0-SNAPSHOT</revision>

        <java.version>1.8</java.version>
        <ektorp.version>1.5.0</ektorp.version>
        <thrift.version>0.11.0</thrift.version>
        <guava.version>21.0</guava.version>
        <spring.version>4.3.12.RELEASE</spring.version>
        <spring-boot.version>1.5.8.RELEASE</spring-boot.version>
        <spring-restdocs.version>1.1.3.RELEASE</spring-restdocs.version>

        <slf4j.version>1.7.25</slf4j.version>
        <logback.version>1.2.3</logback.version>
        <log4j.version>1.2.17</log4j.version>
        <junit-dataprovider.version>1.12.0</junit-dataprovider.version>

        <junit.version>4.12</junit.version>
        <hamcrest.version>1.3</hamcrest.version>
        <mockito.version>1.10.19</mockito.version>
        <project-lombok.version>1.16.12</project-lombok.version>
        <maven-source-plugin.version>2.4</maven-source-plugin.version>
        <maven-jar-plugin.version>2.4</maven-jar-plugin.version>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <!--  User must provide below property configuration based on his/her liferay deployment environment -->
        <base.deploy.dir />

        <!--
            This is were the liferay OSGi modules go to on upload:
                - frontend/*
                - libraries/*
        -->
        <liferay.deploy.dir>${base.deploy.dir}/liferay</liferay.deploy.dir>
        <!--
            This is were the backend services go to on upload:
                - backend/svc/*
        -->
        <backend.deploy.dir>${base.deploy.dir}/tomcat</backend.deploy.dir>
        <!--
            This is were the rest services go to on upload:
                - rest/*
        -->
        <rest.deploy.dir>${base.deploy.dir}/tomcat</rest.deploy.dir>

        <!-- some mem optimization here -->
        <argLine>-Dcatalina.home=${project.build.directory}/home -Xms64m -Xmx128m -XX:MaxPermSize=512m</argLine>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava.version}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-log4j12</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>log4j</groupId>
                <artifactId>log4j</artifactId>
                <version>${log4j.version}</version>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>${logback.version}</version>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-core</artifactId>
                <version>${logback.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-csv</artifactId>
                <version>1.4</version>
            </dependency>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
                <exclusions>
                    <exclusion>
                        <groupId>org.hamcrest</groupId>
                        <artifactId>hamcrest-core</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>com.tngtech.java</groupId>
                <artifactId>junit-dataprovider</artifactId>
                <version>${junit-dataprovider.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.hamcrest</groupId>
                <artifactId>hamcrest-all</artifactId>
                <version>${hamcrest.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-all</artifactId>
                <version>${mockito.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>com.tngtech.jgiven</groupId>
                <artifactId>jgiven-junit</artifactId>
                <version>0.15.1</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>com.liferay</groupId>
                <artifactId>com.liferay.petra.lang</artifactId>
                <version>3.0.0</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>0.7.2.201409121644</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>prepare-agent</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>report</id>
                            <phase>prepare-package</phase>
                            <goals>
                                <goal>report</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <excludes>
                            <exclude>org/xmlsoap/schemas/**</exclude>
                            <exclude>org/apache/ws/commons/schema/**</exclude>
                        </excludes>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>2.10</version>
                    <executions>
                        <execution>
                            <id>add-build-configuration-resources</id>
                            <phase>generate-resources</phase>
                            <goals>
                                <goal>unpack</goal>
                            </goals>
                            <configuration>
                                <artifactItems combine.children="append">
                                    <artifactItem>
                                        <groupId>org.eclipse.sw360</groupId>
                                        <artifactId>build-configuration</artifactId>
                                        <version>${project.version}</version>
                                        <type>jar</type>
                                        <outputDirectory>${project.build.outputDirectory}</outputDirectory>
                                    </artifactItem>
                                </artifactItems>
                            </configuration>
                        </execution>
                        <execution>
                            <id>add-build-configuration-test-resources</id>
                            <phase>generate-test-resources</phase>
                            <goals>
                                <goal>unpack</goal>
                            </goals>
                            <configuration>
                                <artifactItems combine.children="append">
                                    <artifactItem>
                                        <groupId>org.eclipse.sw360</groupId>
                                        <artifactId>build-configuration</artifactId>
                                        <version>${project.version}</version>
                                        <type>test-jar</type>
                                        <outputDirectory>${project.build.testOutputDirectory}</outputDirectory>
                                    </artifactItem>
                                </artifactItems>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>2.6</version>
                    <configuration>
                        <overwrite>true</overwrite>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>buildnumber-maven-plugin</artifactId>
                    <version>1.4</version>
                </plugin>

                <plugin>
                    <groupId>biz.aQute.bnd</groupId>
                    <artifactId>bnd-maven-plugin</artifactId>
                    <version>3.5.0</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>bnd-process</goal>
                            </goals>
                        </execution>
                    </executions>
                    <dependencies>
                        <dependency>
                            <groupId>biz.aQute.bnd</groupId>
                            <artifactId>biz.aQute.bndlib</artifactId>
                            <version>3.5.0</version>
                        </dependency>
                        <dependency>
                            <groupId>com.liferay</groupId>
                            <artifactId>com.liferay.ant.bnd</artifactId>
                            <version>2.0.50</version>
                        </dependency>
                    </dependencies>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
            </plugin>

            <plugin>
                <groupId>com.tngtech.jgiven</groupId>
                <artifactId>jgiven-maven-plugin</artifactId>
                <version>0.9.4</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <format>html</format>
                </configuration>
            </plugin>

            <plugin>
              <groupId>org.codehaus.mojo</groupId>
              <artifactId>versions-maven-plugin</artifactId>
              <version>2.2</version>
            </plugin>
            <plugin>
              <artifactId>maven-scm-plugin</artifactId>
              <version>1.9.4</version>
              <configuration>
                <tag>${project.artifactId}-${project.version}</tag>
              </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>buildnumber-maven-plugin</artifactId>
                <version>1.4</version>
                <executions>
                    <execution>
                        <phase>validate</phase>
                        <goals>
                            <goal>create</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <shortRevisionLength>7</shortRevisionLength>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>1.0.0</version>
                <configuration>
                    <updatePomFile>true</updatePomFile>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>deploy</id>
            <build>
                <pluginManagement>
                    <plugins>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-dependency-plugin</artifactId>
                            <executions>
                                <execution>
                                    <id>copy-jar</id>
                                    <phase>package</phase>
                                    <goals>
                                        <goal>copy</goal>
                                    </goals>
                                    <configuration>
                                        <artifactItems>
                                            <artifactItem>
                                                <groupId>${project.groupId}</groupId>
                                                <artifactId>${project.artifactId}</artifactId>
                                                <version>${project.version}</version>
                                                <type>${project.packaging}</type>
                                                <destFileName>${project.build.finalName}.${project.packaging}</destFileName>
                                            </artifactItem>
                                        </artifactItems>
                                        <!--
                                            This property is set by the submodules themself, depending wether they are backend, frontend or library
                                            modules.
                                            All other submodule leave this property blank causing the dependency plugin to copy the artifact inside
                                            the target folder.
                                        -->
                                        <outputDirectory>${artifact.deploy.dir}</outputDirectory>
                                    </configuration>
                                </execution>
                            </executions>
                        </plugin>
                    </plugins>
                </pluginManagement>
                <plugins>
                    <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-enforcer-plugin</artifactId>
                            <version>3.0.0-M2</version>
                            <executions>
                                <execution>
                                    <id>enforce</id>
                                    <goals>
                                        <goal>enforce</goal>
                                    </goals>
                                    <configuration>
                                        <rules>
                                            <requireProperty>
                                                <property>base.deploy.dir</property>
                                                <message>You must set at least the property 'base.deploy.dir'!</message>
                                                <regex>^.+$</regex>
                                                <regexMessage>You must set at least the property 'base.deploy.dir'!</regexMessage>
                                            </requireProperty>
                                        </rules>
                                        <fail>true</fail>
                                    </configuration>
                                </execution>
                            </executions>
                        </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
